package mastermind;

/**
 * Created by Michel Koolwaaij on 21-02-19.
 */
public class Hint {
    private int correct;
    private int semiCorrect;

    public int getCorrect() {
        return correct;
    }

    public void setCorrect(int correct) {
        this.correct = correct;
    }

    public int getSemiCorrect() {
        return semiCorrect;
    }

    public void setSemiCorrect(int semiCorrect) {
        this.semiCorrect = semiCorrect;
    }
}
