@startuml


class MasterMindConsole
class MasterMindGame
class Hint
class ColorCombination
class Peg

MasterMindConsole "1" --> "1" MasterMindGame : plays
MasterMindGame "1" --> "1" Hint : shows
MasterMindGame "1" --> "1" ColorCombination : checks
MasterMindGame "1" --> "1" ColorCombination : has secret
ColorCombination "1" --> "*" Peg : exists of
ColorCombination ..> Hint

class MasterMindConsole{
  +play():void
}

class MasterMindGame{
 -turn:int
 -won:boolean
 -state:String
 +checkCombination(String guessAsString):void
 +won():boolean

}

class ColorCombination{
 +compareWithOther(other: ColorCombination):Hint
 +determineRightColorRightPosition(ColorCombination other):int
 +determineRightColorWrongPosition(ColorCombination other):int
}

class Hint{
 -correct: int
 -semicorrect: int
}

@enduml
